--- a/src/client/app.css
+++ b/src/client/app.css
@@ -122,6 +122,13 @@ text-align: center;
   border-radius: 50%;
 }
 .controller{
-  background-color:orange;
+  width:100%;
+  background-color:#112035;
+ text-align: center;
+  height:30vh;
+  color:white;
+  padding:10px;
+ 
 }
+
 
