--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Space+Mono&display=swap');
 
 .sidebar {
   margin: 0;
