--- a/src/client/app.css
+++ b/src/client/app.css
@@ -41,7 +41,6 @@
   padding:8px;
 }
 
-
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
@@ -82,8 +81,6 @@
   padding: 0 1rem 0 1rem;
   box-shadow: 5px 10px #888888;
 }
-
-
 .cards{
   background-color:#112035;
   width: 100%;
@@ -95,8 +92,7 @@
 }
 .container{
   width:100%;
-  
- }
+}
 .cardlist{
   width:100%;
   height:5vh; 
@@ -107,10 +103,9 @@
   justify-content: space-between;
 }
 .listcontent{
-color:white;
-width:20%;
-text-align: center;
-  
+  color:white;
+  width:20%;
+  text-align: center;
 }
 .listcontainer{
   width:20%;
@@ -124,11 +119,29 @@ text-align: center;
 .controller{
   width:100%;
   background-color:#112035;
- text-align: center;
+  text-align: center;
   height:30vh;
   color:white;
   padding:10px;
- 
+}
+
+/* Styling for scrollbars */
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #a5a5a5;
+}
+::-webkit-scrollbar
+{
+	width: 12px;
+}
+/* Actual scrollbar */
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
 
 
