--- a/electron/src/components/Application.css
+++ b/electron/src/components/Application.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Monoton&family=Open+Sans:wght@500&family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Monoton&family=Open+Sans:wght@500&family=Oswald&family=Space+Mono&display=swap');
 
 .sidebar {
   margin: 0;
@@ -41,7 +41,6 @@
   padding:8px;
 }
 
-
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
@@ -82,7 +81,6 @@
   padding: 0 1rem 0 1rem;
   box-shadow: 5px 10px #888888;
 }
-
 .cards{
   background-color:#112035;
   width: 100%;
@@ -107,7 +105,7 @@
 .listcontent{
   color:white;
   width:20%;
-  text-align: center; 
+  text-align: center;
 }
 .listcontainer{
   width:20%;
@@ -126,3 +124,24 @@
   color:white;
   padding:10px;
 }
+
+/* Styling for scrollbars */
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #a5a5a5;
+}
+::-webkit-scrollbar
+{
+	width: 12px;
+}
+/* Actual scrollbar */
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+
